// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`infobar reducers execute action 1`] = `
Object {
  "_internal": Object {
    "loading": Object {},
  },
  "pendingActionsCallbacks": Array [],
  "picture": Object {
    "email": null,
    "url": null,
  },
}
`;

exports[`infobar reducers execute action 2`] = `
Object {
  "_internal": Object {
    "loading": Object {},
  },
  "pendingActionsCallbacks": Array [
    Object {
      "callback": [Function],
      "id": "shopifyRefundShippingCostOfOrder-34-5-4194477515",
    },
  ],
  "picture": Object {
    "email": null,
    "url": null,
  },
}
`;

exports[`infobar reducers execute action 3`] = `
Object {
  "_internal": Object {
    "loading": Object {},
  },
  "pendingActionsCallbacks": Array [],
  "picture": Object {
    "email": null,
    "url": null,
  },
}
`;

exports[`infobar reducers execute action 4`] = `
Object {
  "_internal": Object {
    "loading": Object {},
  },
  "pendingActionsCallbacks": Array [],
  "picture": Object {
    "email": null,
    "url": null,
  },
}
`;

exports[`infobar reducers fetch person avatar (user or customer) 1`] = `
Object {
  "_internal": Object {
    "loading": Object {},
  },
  "pendingActionsCallbacks": Array [],
  "picture": Object {
    "email": null,
    "url": null,
  },
}
`;

exports[`infobar reducers fetch person avatar (user or customer) 2`] = `
Object {
  "_internal": Object {
    "loading": Object {},
  },
  "pendingActionsCallbacks": Array [],
  "picture": Object {
    "email": null,
    "url": null,
  },
}
`;

exports[`infobar reducers fetch person avatar (user or customer) 3`] = `
Object {
  "_internal": Object {
    "loading": Object {},
  },
  "pendingActionsCallbacks": Array [],
  "picture": Object {
    "email": null,
    "url": null,
  },
}
`;
